# pyrig

./: .cspell.jsonc  .env  .gitignore  .log_func_call_exclude.jsonc  .markdownlint.jsonc  .pyrig_config.jsonc  pyproject.toml  pyrig.code-workspace  readme.md
pyrig/: __init__.py  __main__.py  app.py  constants.py  logging.py  version.py
pyrig/_testing/: __init__.py  _pyavcad_testing.py  _pyrig_testing.py
pyrig/gui/: __init__.py  icons.py  splash.py
pyrig/gui/main/: __init__.py  chip.py  ctrl.py  pres.py  view.py
pyrig/gui/widgets/: base.py  baseframe.py  graphview.py
pyrig/models/acctng/: db.py  fixed4.py  money.py
pyrig/models/avcad/: constants.py  db.py
pyrig/models/db/: __init__.py
pyrig/models/db/migrations/: __init__.py  schema_map.py  v1.py
pyrig/models/ynab/: __init__.py  auth.py  budget.py  comm.py
tests/: pyavcad_test.py  pyrig_test.py
